# loglens

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  models.rs
src-tauri/src/commands/: ai_proxy.rs  file_reader.rs  mod.rs  tail_watcher.rs
src/components/AiSidebar/: StreamingText.tsx  index.tsx
src/components/DropZone/: index.tsx
src/components/LogViewer/: LogLine.tsx  StackTrace.tsx  index.tsx
src/components/Settings/: index.tsx
src/components/Toast/: index.tsx
src/components/Toolbar/: FilterBar.tsx  index.tsx
src/hooks/: useAiAnalysis.ts  useFilter.ts  useLogFile.ts  useSettings.ts  useTailWatch.ts  useToast.ts
src/styles/: globals.css  themes.ts
src/types/: index.ts
