[package]
name = "loglens"
version = "0.1.0"
description = "LogLens — 智能日志透视仪"
authors = ["xzl"]
edition = "2021"

[lib]
name = "loglens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
encoding_rs = "0.8"
tokio-util = "0.7"
chrono = "0.4"
